--- a/Collectio.Infra.CrossCutting.Ioc/Collectio.Infra.CrossCutting.Ioc.csproj
+++ b/Collectio.Infra.CrossCutting.Ioc/Collectio.Infra.CrossCutting.Ioc.csproj
@@ -7,12 +7,14 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Collectio.Application\Collectio.Application.csproj" />
     <ProjectReference Include="..\Collectio.Domain\Collectio.Domain.csproj" />
+    <ProjectReference Include="..\Collectio.Infra.Data\Collectio.Infra.Data.csproj" />
   </ItemGroup>
 
 </Project>
